dsoftbus path modify Signed-off-by: wanghongtao <wanghongtao22@huawei.com>

--- a/adapter/common/net/bluetooth/net_bluetooth.gni
+++ b/adapter/common/net/bluetooth/net_bluetooth.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 adapter_ble_inc = [
   "$dsoftbus_root_path/adapter/common/include",
