--- a/core/bus_center/lnn/disc_mgr/bus_center_disc_mgr.gni
+++ b/core/bus_center/lnn/disc_mgr/bus_center_disc_mgr.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 bus_center_disc_mgr_src = [ "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/src/lnn_discovery_interface.c" ]
 
