--- a/core/bus_center/monitor/bus_center_monitor.gni
+++ b/core/bus_center/monitor/bus_center_monitor.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../dsoftbus.gni")
 
 if (dsoftbus_feature_lnn_net) {
   bus_center_monitor_src =
