--- a/adapter/common/net/hdi/net_hdi.gni
+++ b/adapter/common/net/hdi/net_hdi.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 softbus_adapter_hdi_path = "$softbus_adapter_common/net/hdi"
 
