--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -10,9 +10,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-import(
-    "//foundation/communication/dsoftbus/adapter/common/net/bluetooth/net_bluetooth.gni")
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../adapter/common/net/bluetooth/net_bluetooth.gni")
+import("../../dsoftbus.gni")
 
 br_adapter_src =
     [ "$dsoftbus_root_path/core/adapter/br/mock/wrapper_br_interface.c" ]
