--- a/core/bus_center/utils/bus_center_utils.gni
+++ b/core/bus_center/utils/bus_center_utils.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../dsoftbus.gni")
 
 core_bus_center_utils_path = "$dsoftbus_root_path/core/bus_center/utils"
 
