--- a/core/common/security/permission/permission.gni
+++ b/core/common/security/permission/permission.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 softbus_permission_external_deps = []
 
