--- a/core/connection/conn.gni
+++ b/core/connection/conn.gni
@@ -11,14 +11,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/core/connection/ble/conn_ble.gni")
-import("//foundation/communication/dsoftbus/core/connection/br/conn_br.gni")
-import(
-    "//foundation/communication/dsoftbus/core/connection/wifi_direct/wifi_direct.gni")
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../core/connection/ble/conn_ble.gni")
+import("../../core/connection/br/conn_br.gni")
+import("../../core/connection/wifi_direct/wifi_direct.gni")
+import("../../dsoftbus.gni")
 
 #import("//foundation/communication/dsoftbus/core/connection/common/conn_common.gni")
-import("//foundation/communication/dsoftbus/core/connection/tcp/conn_tcp.gni")
+import("../../core/connection/tcp/conn_tcp.gni")
 conn_manager_src = ble_connection_src + br_connection_src + tcp_connection_src +
                    wifi_direct_connection_src
 conn_manager_inc = ble_connection_inc + br_connection_inc + tcp_connection_inc +
