--- a/core/connection/p2p/conn_p2p.gni
+++ b/core/connection/p2p/conn_p2p.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../dsoftbus.gni")
 
 p2p_connection_src = []
 p2p_connection_external_deps = []
