--- a/core/transmission/trans_channel/qos/qos.gni
+++ b/core/transmission/trans_channel/qos/qos.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 trans_qos_src = []
 trans_qos_inc =
