--- a/core/transmission_socket/trans.gni
+++ b/core/transmission_socket/trans.gni
@@ -11,9 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import(
-    "//foundation/communication/dsoftbus/core/transmission/trans_channel/trans_channel.gni")
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../core/transmission/trans_channel/trans_channel.gni")
+import("../../dsoftbus.gni")
 
 native_source_path = rebase_path("$dsoftbus_root_path")
 broadcast_dep_dir =
