--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -64,6 +64,11 @@ config("dsoftbus_sdk_interface") {
     "$dsoftbus_root_path/interfaces/inner_kits/transport",
     "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
   ]
+
+  if (enhanced_kits_broadcast) {
+    include_dirs +=
+        [ "$dsoftbus_root_path/dsoftbus_enhance/interfaces/kits/broadcast" ]
+  }
 }
 
 target(build_type, "softbus_client") {
