--- a/sdk/bus_center/bus_center_sdk.gni
+++ b/sdk/bus_center/bus_center_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../dsoftbus.gni")
 
 bus_center_service_sdk_src =
     [ "$dsoftbus_root_path/sdk/bus_center/service/src/client_bus_center.c" ]
