--- a/sdk/frame/frame_sdk.gni
+++ b/sdk/frame/frame_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../dsoftbus.gni")
 softbus_client_frame_inc = []
 if (defined(ohos_lite)) {
   if (ohos_kernel_type == "liteos_m") {
