--- a/sdk/transmission/ipc/trans_ipc_sdk.gni
+++ b/sdk/transmission/ipc/trans_ipc_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../dsoftbus.gni")
 
 trans_ipc_proxy_sdk_inc = [ "$dsoftbus_root_path/sdk/transmission/ipc/include" ]
 if (defined(ohos_lite)) {
