--- a/sdk/transmission/trans_channel/auth/trans_auth_sdk.gni
+++ b/sdk/transmission/trans_channel/auth/trans_auth_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 trans_auth_channel_sdk_src = [ "$dsoftbus_sdk_path/transmission/trans_channel/auth/src/client_trans_auth_manager.c" ]
 trans_auth_channel_sdk_inc =
