--- a/sdk/transmission/trans_channel/qos/trans_qos_sdk.gni
+++ b/sdk/transmission/trans_channel/qos/trans_qos_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 trans_qos_sdk_src = [
   "$dsoftbus_sdk_path/transmission/trans_channel/qos/src/client_qos_manager.c",
