--- a/sdk/transmission/trans_channel/tcp_direct/trans_tcp_sdk.gni
+++ b/sdk/transmission/trans_channel/tcp_direct/trans_tcp_sdk.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../../../dsoftbus.gni")
 
 trans_direct_channel_sdk_src = [
   "$dsoftbus_sdk_path/transmission/trans_channel/tcp_direct/src/client_trans_tcp_direct_callback.c",
