--- a/tests/utils/utils.gni
+++ b/tests/utils/utils.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/communication/dsoftbus/dsoftbus.gni")
+import("../../dsoftbus.gni")
 
 test_utils_src =
     [ "$dsoftbus_root_path/tests/utils/exception_branch_checker.cpp" ]
