--- a/core/bus_center/lnn/net_builder/net_builder.gni
+++ b/core/bus_center/lnn/net_builder/net_builder.gni
@@ -41,6 +41,8 @@ if (dsoftbus_feature_lnn_net) {
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_cipherkey_manager_virtual.c",
       "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_device_info_recovery_virtual.c",
     ]
+    bus_center_builder_inc =
+        [ "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single" ]
   } else {
     import(
         "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/cipherkey/cipherkey.gni")
@@ -50,6 +52,7 @@ if (dsoftbus_feature_lnn_net) {
       "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/fast_online/lnn_device_info_recovery.c",
       "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/net_builder/fast_online/lnn_secure_storage.c",
     ]
+    bus_center_builder_inc = [ "$dsoftbus_root_path/core/dsoftbus_enhance/connection/wifi_direct/adapter/single" ]
   }
 } else {
   bus_center_builder_src = [
@@ -58,13 +61,12 @@ if (dsoftbus_feature_lnn_net) {
     "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter_virtual.c",
   ]
 }
-bus_center_builder_inc = [
+bus_center_builder_inc += [
   "$dsoftbus_root_path/core/adapter/common/net/bluetooth/include",
   "$dsoftbus_root_path/core/adapter/bus_center/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
   "$dsoftbus_root_path/core/common/dfx/hisysevent_adapter/include",
-  "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
 ]
 bus_center_builder_deps = []
 
