--- a/core/connection/wifi_direct/wifi_direct.gni
+++ b/core/connection/wifi_direct/wifi_direct.gni
@@ -28,15 +28,12 @@ wifi_direct_connection_external_deps = []
 wifi_direct_connection_inc = [
   "$dsoftbus_root_path/core/connection/wifi_direct",
   "//foundation/communication/wifi/wifi/interfaces/kits/c",
-  "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single",
 ]
 
 if (dsoftbus_feature_conn_p2p == true &&
     softbus_communication_wifi_feature == true) {
   wifi_direct_connection_src += [
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_coexist_rule.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_command_manager.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_decision_center.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_initiator.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_manager.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_ip_manager.c",
@@ -45,6 +42,10 @@ if (dsoftbus_feature_conn_p2p == true &&
     "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_role_option.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/channel/default_negotiate_channel.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/channel/fast_connect_negotiate_channel.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/command/wifi_direct_command_manager.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/command/wifi_direct_connect_command.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/command/wifi_direct_disconnect_command.c",
+    "$dsoftbus_root_path/core/connection/wifi_direct/command/wifi_direct_negotiate_command.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/data/info_container.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/data/inner_link.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/data/wifi_config_info.c",
@@ -61,12 +62,7 @@ if (dsoftbus_feature_conn_p2p == true &&
     "$dsoftbus_root_path/core/connection/wifi_direct/entity/p2p_entity/p2p_group_connecting_state.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/entity/p2p_entity/p2p_group_creating_state.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/entity/p2p_entity/p2p_group_removing_state.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/negotiate_state/available_state.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/negotiate_state/processing_state.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/negotiate_state/waiting_connect_request_state.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/negotiate_state/waiting_connect_response_state.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/processor/p2p_v1_processor.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/processor/p2p_v2_processor.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/protocol/json_protocol.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/protocol/tlv_protocol.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/protocol/wifi_direct_protocol_factory.c",
@@ -77,14 +73,6 @@ if (dsoftbus_feature_conn_p2p == true &&
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_utils.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_anonymous.c",
     "$dsoftbus_root_path/core/connection/wifi_direct/utils/wifi_direct_perf_recorder.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/processor/wifi_direct_processor_factory.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/entity/wifi_direct_entity_factory.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/broadcast_handler.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/broadcast_receiver.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/link_manager_broadcast_handler.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/p2p_entity_broadcast_handler.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/resource_manager_broadcast_handler.c",
-    "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter.c",
   ]
 
   if (enhanced_wifi_direct) {
@@ -93,8 +81,21 @@ if (dsoftbus_feature_conn_p2p == true &&
 
     wifi_direct_connection_inc += wifi_direct_connection_enhance_inc
     wifi_direct_connection_src += wifi_direct_connection_enhance_src
+    wifi_direct_connection_external_deps += wifi_direct_connection_enhance_deps
   } else {
-    wifi_direct_connection_src += []
+    wifi_direct_connection_inc +=
+        [ "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single" ]
+    wifi_direct_connection_src += [
+      "$dsoftbus_root_path/core/connection/wifi_direct/wifi_direct_decision_center.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/processor/wifi_direct_processor_factory.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/entity/wifi_direct_entity_factory.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/broadcast_handler.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/p2p_entity_broadcast_handler.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/link_manager_broadcast_handler.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/resource_manager_broadcast_handler.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/broadcast_receiver.c",
+      "$dsoftbus_root_path/core/connection/wifi_direct/adapter/single/wifi_direct_p2p_adapter.c",
+    ]
   }
 
   wifi_direct_connection_external_deps += [ "wifi:wifi_sdk" ]
