--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -168,6 +168,8 @@ if (defined(ohos_lite)) {
       cfi_cross_dso = true
       debug = false
     }
+    branch_protector_ret = "pac_ret"
+
     include_dirs = [
       "$dsoftbus_root_path/interfaces/kits",
       "$dsoftbus_root_path/interfaces/kits/common",
