--- a/components/mbedtls/BUILD.gn
+++ b/components/mbedtls/BUILD.gn
@@ -93,6 +93,13 @@ config("mbedtls_config") {
 }
 
 ohos_shared_library("mbedtls_shared") {
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
+
   sources = mbedtls_sources
   output_name = "mbedtls"
   public_configs = [ ":mbedtls_config" ]
