--- a/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
+++ b/tests/sdk/frame/fuzztest/softbusclientstub_fuzzer/BUILD.gn
@@ -63,6 +63,13 @@ config("dsoftbus_sdk_interface") {
 }
 
 ohos_static_library("softbus_client_static") {
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
+
   sources = common_client_src
   include_dirs = common_client_inc
   deps = common_client_deps
