--- a/tests/sdk/transmission/integration_test/BUILD.gn
+++ b/tests/sdk/transmission/integration_test/BUILD.gn
@@ -18,6 +18,13 @@ module_output_path = "dsoftbus/transmission"
 dsoftbus_root_path = "../../../.."
 
 ohos_executable("softbus_test_server") {
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
+
   sources = [ "test_server.cpp" ]
 
   external_deps = [ "dsoftbus:softbus_client" ]
