--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -95,6 +95,19 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/sdk/frame/$os_type/include",
     "//utils/system/safwk/native/include",
   ]
+
+  if (dsoftbus_feature_ex_kits) {
+    import(
+        "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/extend/bus_center_ex.gni")
+
+    bus_center_server_inc += bus_center_ex_inc
+    bus_center_server_src += bus_center_ex_src
+  } else {
+    bus_center_server_inc +=
+        [ "$dsoftbus_root_path/core/bus_center/extend/include" ]
+    bus_center_server_src += [ "$dsoftbus_root_path/core/bus_center/extend/src/bus_center_ex_obj_stub.cpp" ]
+  }
+
   bus_center_server_external_deps +=
       bus_center_adapter_external_deps + bus_center_ledger_external_deps +
       bus_center_core_adapter_external_deps + adapter_wifi_external_deps +
