Description:Meta node requirement development Feature or Bugfix:Feature Binary Source:No
Signed-off-by: sun-jiashun-123 <sunjiashun@huawei.com>

--- a/core/bus_center/bus_center_server.gni
+++ b/core/bus_center/bus_center_server.gni
@@ -147,3 +147,25 @@ if (btn_enhanced) {
   bus_center_server_src += btn_src
   bus_center_server_inc += btn_inc
 }
+
+meta_node_dir = "dsoftbus_enhance/core/bus_center/lnn/meta_node"
+meta_node_enhanced = exec_script("$dsoftbus_root_path/check_sub_module.py",
+                                 [
+                                   "$native_source_path",
+                                   "$meta_node_dir",
+                                 ],
+                                 "value")
+
+if (meta_node_enhanced) {
+  import(
+      "//foundation/communication/dsoftbus/core/bus_center/lnn/meta_node/meta_node.gni")
+
+  bus_center_server_src += bus_center_meta_node_src
+  bus_center_server_inc += bus_center_meta_node_inc
+} else {
+  import(
+      "//foundation/communication/dsoftbus/core/bus_center/lnn/meta_node/meta_node.gni")
+
+  bus_center_server_src += bus_center_meta_node_src
+  bus_center_server_inc += bus_center_meta_node_inc
+}
